--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
         </a>
 
         <nav class="desktop-nav" aria-label="Hauptnavigation">
+          <a class="nav-link" href="/schadennotdienst-stuttgart/">Schadennotdienst Stuttgart</a>
           <a class="nav-link" href="#leistungen">Leistungen</a>
           <a class="nav-link" href="#ablauf">Ablauf</a>
           <a class="nav-link" href="#ueber-uns">Über uns</a>
           <a class="nav-link" href="#kontakt">Kontakt</a>
-          <a class="btn btn-primary" href="#kontakt">Jetzt anfragen</a>
+          <a class="btn btn-primary" href="tel:+491723555939">Jetzt anrufen</a>
         </nav>
 
         <button class="hamburger" id="hamburger" aria-label="Menü" aria-expanded="false" aria-controls="mobile-menu">
@@ -30,12 +31,13 @@
       </div>
 
       <div class="mobile-menu" id="mobile-menu">
+        <a class="mobile-link" href="/schadennotdienst-stuttgart/">Schadennotdienst Stuttgart</a>
         <a class="mobile-link" href="#leistungen">Leistungen</a>
         <a class="mobile-link" href="#ablauf">Ablauf</a>
         <a class="mobile-link" href="#ueber-uns">Über uns</a>
         <a class="mobile-link" href="#kontakt">Kontakt</a>
         <div class="mobile-cta">
-          <a class="btn btn-primary" href="#kontakt">Jetzt anfragen</a>
+          <a class="btn btn-primary" href="tel:+491723555939">Jetzt anrufen: 0172 3555 939</a>
         </div>
       </div>
     </header>
@@ -49,7 +51,7 @@
             PBC GmbH – Ihr zuverlässiger Partner für schnelle Hilfe, transparente Abläufe und saubere Ergebnisse.
           </p>
           <div class="hero-actions">
-            <a class="btn btn-primary" href="#kontakt">Sofort Kontakt aufnehmen</a>
+            <a class="btn btn-primary" href="tel:+491723555939">Jetzt anrufen: 0172 3555 939</a>
             <a class="btn btn-secondary" href="#leistungen">Leistungen ansehen</a>
           </div>
         </div>
@@ -130,8 +132,8 @@
           <div class="contact-card">
             <p class="contact-lead">Schreib uns kurz – wir melden uns schnell zurück.</p>
             <div class="contact-actions">
-              <a class="btn btn-primary" href="mailto:info@pbc-gmbh.de">E-Mail senden</a>
-              <a class="btn btn-secondary" href="tel:+490000000000">Anrufen</a>
+              <a class="btn btn-primary" href="tel:+491723555939">Jetzt anrufen: 0172 3555 939</a>
+              <a class="btn btn-secondary" href="mailto:info@pbc-notdienst.de">E-Mail senden</a>
             </div>
           </div>
         </div>
